# fl-plugin-sorter

./: Cargo.toml  README.md
src/: config.rs  main.rs  plugin.rs
src/commands/: generate.rs  list.rs  mod.rs  new.rs  sort.rs  unsort.rs
